# doo

./: Cargo.toml  README.md
data/: dev.rahul.doo-autostart.desktop  dev.rahul.doo.desktop
src/: capture.rs  hotkey.rs  main.rs  storage.rs  style.css  tray.rs  window.rs
